Added CSS stylesheet

--- a/README.me
+++ b/README.me
@@ -2,3 +2,5 @@ This is the Odin Project's website design project.
 Log
 25 Nov 2021: Started the HTML project in the
 Foundations section.
+
+26 Nov 2021: Added CSS stylesheet
